--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<button
 					id="theme-toggle"
 					title="Alterar a cor do tema"
-					class="mr-1 inline-flex rounded-xl border border-transparent bg-white p-2.5 leading-none text-gray-300 transition-all hover:border-white hover:text-gray-500 dark:bg-dark-800 dark:text-dark-400 dark:hover:border-dark-600 dark:hover:text-dark-300"></button>
+					class="mr-1 inline-flex rounded-xl border border-transparent bg-white p-2.5 leading-none text-gray-300 transition-all hover:border-white hover:text-gray-500 dark:bg-dark-800 dark:text-dark-400 dark:hover:border-dark-800 dark:hover:text-dark-300"></button>
 			</nav>
 			<!-- hero -->
 			<div class="flex justify-center text-center lg:justify-start lg:pt-5 lg:pb-7 lg:text-left">
@@ -127,8 +127,8 @@
 					<p class="mt-0 mb-4 text-sm text-gray-600 dark:text-dark-500">Venha nos fazer uma visita e conhecer nossos planos</p>
 				</div>
 				<!-- Location -->
-				<div class="grid grid-cols-1 place-items-center sm:place-items-center gap-4 sm:grid-cols-2">
-					<div class="w-full max-w-sm rounded-lg bg-white dark:bg-dark-800 lg:flex lg:h-56 lg:max-w-full">
+				<div class="grid grid-cols-1 place-items-center  gap-4 sm:grid-cols-2">
+					<div class="w-full max-w-sm rounded-lg bg-white dark:bg-dark-800 lg:flex lg:h-72 lg:max-w-full">
 						<div
 							class="h-48 flex-none overflow-hidden rounded-t bg-cover text-center lg:h-auto lg:w-48 lg:rounded-t-none lg:rounded-l"
 							style="background-image: url('assets/images/unidade1.jpg')"
@@ -141,8 +141,7 @@
 								</span>
 								<div class="mb-2 text-xl font-bold text-gray-900 dark:text-dark-200">Vila Bossi</div>
 								<p class="text-xs text-gray-500 dark:text-dark-500">
-									Inaugurada no dia 08/10/2018, nossa primeira unidade conta com estacionamento, ar-condicionado e
-									capacidade para X alunos
+									Inaugurada em 08/10/2018, nossa primeira unidade está localizada na região central de Louveira e conta com equipe especializada, equipamentos de última geração, wi-fi, ambiente climatizado, além de uma equipe especializada para lhe oferecer um atendimento de excelência.
 								</p>
 							</div>
 							<div class="grid grid-cols-2">
@@ -152,12 +151,12 @@
 								</div>
 								<div class="space-y-1 text-xs">
 									<p class="font-semibold leading-none text-gray-900 dark:text-gray-400">Telefone:</p>
-									<p class="text-gray-700 dark:text-dark-500">(19) 99329-9990</p>
+									<p class="text-gray-700 dark:text-dark-500 inline-flex items-center"><img alt="whatsapp logo" src="./assets/svg/whatsapp.svg" class="h-5 w-5 mr-1">(19) 99329-9990</p>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="w-full max-w-sm rounded-lg bg-white dark:bg-dark-800 lg:flex lg:h-56 lg:max-w-full">
+					<div class="w-full max-w-sm rounded-lg bg-white dark:bg-dark-800 lg:flex lg:h-72 lg:max-w-full">
 						<div
 							class="h-48 flex-none overflow-hidden rounded-t bg-cover text-center lg:h-auto lg:w-48 lg:rounded-t-none lg:rounded-l"
 							style="background-image: url('assets/images/unidade2.jpg')"
@@ -170,8 +169,7 @@
 								</span>
 								<div class="mb-2 text-xl font-bold text-gray-900 dark:text-dark-200">Santo Antônio</div>
 								<p class="text-xs text-gray-500 dark:text-dark-500">
-									Inaugurada no dia 27/08/2022, nossa segunda unidade conta com estacionamento, ar-condicionado e
-									capacidade para X alunos
+									Inaugurada em 27/08/2022, nossa segunda unidade está localizada em uma região privilegiada de Louveira e conta com equipe especializada, equipamentos de última geração, wi-fi, uma linda cafeteria, além de uma equipe especializada para lhe oferecer um atendimento de excelência.
 								</p>
 							</div>
 							<div class="grid grid-cols-2">
@@ -181,7 +179,7 @@
 								</div>
 								<div class="space-y-1 text-xs">
 									<p class="font-semibold leading-none text-gray-900 dark:text-gray-400">Telefone:</p>
-									<p class="text-gray-700 dark:text-dark-500">(19) 99183-9493</p>
+                                    <p class="text-gray-700 dark:text-dark-500 inline-flex items-center"><img alt="whatsapp logo" src="./assets/svg/whatsapp.svg" class="h-5 w-5 mr-1">(19) 99183-9493</p>
 								</div>
 							</div>
 						</div>
