--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,78 @@
 				</div>
 			</div>
 			<!-- Policy -->
-			<section class="grid grid-cols-1 gap-5 my-10 sm:grid-cols-3">
+			<section>
+				<div class="relative mx-auto w-full items-center py-12">
+					<div class="mx-auto grid w-full grid-cols-1 gap-6 lg:grid-cols-3">
+						<!-- Mission -->
+						<div>
+							<img
+								class="mb-8 w-full rounded-xl object-cover object-center md:h-36 lg:h-48"
+								src="https://img.freepik.com/free-photo/people-exercising-sport-concept-happy-caucasian-man-dark-skinned-woman-raise-dumbbells-carry-fitness-mat-have-toothy-smiles_273609-30880.jpg?w=1380&t=st=1661543282~exp=1661543882~hmac=12efb10f212d02ae03b3db99cb87562567dd7a05cce3f4b722936a319eefa8dc"
+								alt="blog" />
+
+							<h1 class="mx-auto mb-2 text-2xl font-semibold leading-none tracking-tighter text-gray-900 dark:text-dark-50">
+								MISSÃO
+							</h1>
+							<p class="mx-auto text-sm leading-normal text-gray-500 dark:text-dark-500">
+								Proporcionar uma experiência única, oferecendo um serviço de excelência em prol à qualidade de vida, saúde e
+								bem-estar de seus frequentadores em um ambiente agradável oportunizando vínculos significativos que
+								impulsionem as pessoas à seus objetivos.
+							</p>
+
+							<!-- <div class="mt-4">
+                                <a href="#" class="inline-flex items-center mt-4 font-semibold text-blue-600 lg:mb-0 hover:text-neutral-600" title="read more"> Read More » </a>
+                            </div> -->
+						</div>
+						<!-- Vision -->
+						<div>
+							<img
+								class="mb-8 w-full rounded-xl object-cover object-center md:h-36 lg:h-48"
+								src="https://img.freepik.com/premium-photo/waist-up-shot-cheerful-sporty-woman-raises-dumbbell-does-biceps-exercises-has-strong-fit-body-listens-audio-track-headphones-wears-sportsclothes-isolated-beige-background-blank-space_273609-58662.jpg"
+								alt="blog" />
+
+							<h1 class="mx-auto mb-2 text-2xl font-semibold leading-none tracking-tighter text-gray-900 dark:text-dark-50">
+								VISÃO
+							</h1>
+							<p class="mx-auto text-sm leading-normal text-gray-500 dark:text-dark-500">
+								Respeitando a individualidade de cada aluno, objetivando ser referência no mercado, proporcionando,
+								principalmente, qualidade de vida aos alunos, motivando-os rumo à concretização de seus objetivos com
+								seriedade, profissionalismo e dedicação.
+							</p>
+
+							<!-- <div class="mt-4">
+                                <a href="#" class="inline-flex items-center mt-4 font-semibold text-blue-600 lg:mb-0 hover:text-neutral-600" title="read more"> Read More » </a>
+                            </div> -->
+						</div>
+						<!-- Values -->
+						<div>
+							<img
+								class="mb-8 w-full rounded-xl object-cover object-center md:h-36 lg:h-48"
+								src="https://img.freepik.com/free-photo/horizontal-shot-happy-afro-woman-shows-biceps-satisfied-after-active-training_273609-27337.jpg?t=st=1661543210~exp=1661543810~hmac=d5f359077c564c1dcb773c676b5150985a137ce33db4b157caa5f2ce3dc4be2c"
+								alt="blog" />
+
+							<h1 class="mx-auto mb-2 text-2xl font-semibold leading-none tracking-tighter text-gray-900 dark:text-dark-50">
+								VALORES
+							</h1>
+							<p class="mx-auto text-sm leading-normal text-gray-500 dark:text-dark-500">
+								Proporcionar uma experiência única, oferecendo um Excelência no atendimento por meio do respeito e da
+								transparência.<br />
+								Dedicação e Atenção; Valorização do Ser humano.<br />
+								Ética e Honestidade<br />
+								Sentimento do Cliente<br />
+								Senso de Urgência Espírito de Equipe<br />
+								Atitude de Dono Determinação
+							</p>
+
+							<!-- <div class="mt-4">
+                                <a href="#" class="inline-flex items-center mt-4 font-semibold text-blue-600 lg:mb-0 hover:text-neutral-600" title="read more"> Read More » </a>
+                            </div> -->
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="my-10 grid hidden grid-cols-1 gap-5 sm:grid-cols-3">
 				<!-- Mission -->
 				<div class="text-center sm:text-left">
 					<div class="text-2xl font-bold text-gray-900 dark:text-dark-50">
@@ -108,26 +179,26 @@
 						<h1>VALORES</h1>
 					</div>
 					<p class="mt-0 mb-4 text-sm text-gray-600 dark:text-dark-500">
-						Excelência no atendimento por meio do respeito e da transparência.</br>
-                        Dedicação e Atenção; Valorização do Ser humano.</br>
-						Ética e Honestidade</br>
-                        Sentimento do Cliente</br>
-                        Senso de Urgência Espírito de Equipe</br>
-                        Atitude de Dono Determinação
+						Excelência no atendimento por meio do respeito e da transparência.<br />
+						Dedicação e Atenção; Valorização do Ser humano.<br />
+						Ética e Honestidade<br />
+						Sentimento do Cliente<br />
+						Senso de Urgência Espírito de Equipe<br />
+						Atitude de Dono Determinação
 					</p>
 				</div>
 			</section>
 			<!-- Company units -->
 			<section>
 				<!-- Title -->
-				<div class="text-center lg:text-left mb-5">
+				<div class="mb-5 text-center lg:text-left">
 					<div class="text-2xl font-bold text-gray-900 dark:text-dark-50">
 						<h1>Nossas Unidades</h1>
 					</div>
 					<p class="mt-0 mb-4 text-sm text-gray-600 dark:text-dark-500">Venha nos fazer uma visita e conhecer nossos planos</p>
 				</div>
 				<!-- Location -->
-				<div class="grid grid-cols-1 place-items-center  gap-4 sm:grid-cols-2">
+				<div class="grid grid-cols-1 place-items-center gap-4 sm:grid-cols-2">
 					<div class="w-full max-w-sm rounded-lg bg-white dark:bg-dark-800 lg:flex lg:h-72 lg:max-w-full">
 						<div
 							class="h-48 flex-none overflow-hidden rounded-t bg-cover text-center lg:h-auto lg:w-48 lg:rounded-t-none lg:rounded-l"
@@ -141,7 +212,9 @@
 								</span>
 								<div class="mb-2 text-xl font-bold text-gray-900 dark:text-dark-200">Vila Bossi</div>
 								<p class="text-xs text-gray-500 dark:text-dark-500">
-									Inaugurada em 08/10/2018, nossa primeira unidade está localizada na região central de Louveira e conta com equipe especializada, equipamentos de última geração, wi-fi, ambiente climatizado, além de uma equipe especializada para lhe oferecer um atendimento de excelência.
+									Inaugurada em 08/10/2018, nossa primeira unidade está localizada na região central de Louveira e conta
+									com equipe especializada, equipamentos de última geração, wi-fi, ambiente climatizado, além de uma
+									equipe especializada para lhe oferecer um atendimento de excelência.
 								</p>
 							</div>
 							<div class="grid grid-cols-2">
@@ -151,7 +224,9 @@
 								</div>
 								<div class="space-y-1 text-xs">
 									<p class="font-semibold leading-none text-gray-900 dark:text-gray-400">Telefone:</p>
-									<p class="text-gray-700 dark:text-dark-500 inline-flex items-center"><img alt="whatsapp logo" src="./assets/svg/whatsapp.svg" class="h-5 w-5 mr-1">(19) 99329-9990</p>
+									<p class="inline-flex items-center text-gray-700 dark:text-dark-500">
+										<img alt="whatsapp logo" src="./assets/svg/whatsapp.svg" class="mr-1 h-5 w-5" />(19) 99329-9990
+									</p>
 								</div>
 							</div>
 						</div>
@@ -169,7 +244,9 @@
 								</span>
 								<div class="mb-2 text-xl font-bold text-gray-900 dark:text-dark-200">Santo Antônio</div>
 								<p class="text-xs text-gray-500 dark:text-dark-500">
-									Inaugurada em 27/08/2022, nossa segunda unidade está localizada em uma região privilegiada de Louveira e conta com equipe especializada, equipamentos de última geração, wi-fi, uma linda cafeteria, além de uma equipe especializada para lhe oferecer um atendimento de excelência.
+									Inaugurada em 27/08/2022, nossa segunda unidade está localizada em uma região privilegiada de Louveira e
+									conta com equipe especializada, equipamentos de última geração, wi-fi, uma linda cafeteria, além de uma
+									equipe especializada para lhe oferecer um atendimento de excelência.
 								</p>
 							</div>
 							<div class="grid grid-cols-2">
@@ -179,7 +256,9 @@
 								</div>
 								<div class="space-y-1 text-xs">
 									<p class="font-semibold leading-none text-gray-900 dark:text-gray-400">Telefone:</p>
-                                    <p class="text-gray-700 dark:text-dark-500 inline-flex items-center"><img alt="whatsapp logo" src="./assets/svg/whatsapp.svg" class="h-5 w-5 mr-1">(19) 99183-9493</p>
+									<p class="inline-flex items-center text-gray-700 dark:text-dark-500">
+										<img alt="whatsapp logo" src="./assets/svg/whatsapp.svg" class="mr-1 h-5 w-5" />(19) 99183-9493
+									</p>
 								</div>
 							</div>
 						</div>
