--- a/src/index.html
+++ b/src/index.html
@@ -86,8 +86,8 @@
 						<div>
 							<img
 								class="mb-8 w-full rounded-xl object-cover object-center md:h-36 lg:h-48"
-								src="https://img.freepik.com/free-photo/people-exercising-sport-concept-happy-caucasian-man-dark-skinned-woman-raise-dumbbells-carry-fitness-mat-have-toothy-smiles_273609-30880.jpg?w=1380&t=st=1661543282~exp=1661543882~hmac=12efb10f212d02ae03b3db99cb87562567dd7a05cce3f4b722936a319eefa8dc"
-								alt="blog" />
+								src="assets/images/sporty-woman-trains-with-dumbbells-has-cheerful-look-her-husband-stands-near-holds-rolled-up-fitness-mat-isolated-purple-background.jpg"
+								alt="Homem segurando halteres e mulher segurando colchonete de ginastica" />
 
 							<h1 class="mx-auto mb-2 text-2xl font-semibold leading-none tracking-tighter text-gray-900 dark:text-dark-50">
 								MISSÃO
@@ -106,8 +106,8 @@
 						<div>
 							<img
 								class="mb-8 w-full rounded-xl object-cover object-center md:h-36 lg:h-48"
-								src="https://img.freepik.com/premium-photo/waist-up-shot-cheerful-sporty-woman-raises-dumbbell-does-biceps-exercises-has-strong-fit-body-listens-audio-track-headphones-wears-sportsclothes-isolated-beige-background-blank-space_273609-58662.jpg"
-								alt="blog" />
+								src="assets/images/cheerful-woman-leads-sporty-lifestyle-dressed-activewear-hold-rolled-mat-being-good-mood-prepares-training-gym-smiles-broadly-isolated-brown-background-regular-workout-concept.jpg"
+								alt="Mulher segurando colchonete de ginastica" />
 
 							<h1 class="mx-auto mb-2 text-2xl font-semibold leading-none tracking-tighter text-gray-900 dark:text-dark-50">
 								VISÃO
@@ -126,8 +126,8 @@
 						<div>
 							<img
 								class="mb-8 w-full rounded-xl object-cover object-center md:h-36 lg:h-48"
-								src="https://img.freepik.com/free-photo/horizontal-shot-happy-afro-woman-shows-biceps-satisfied-after-active-training_273609-27337.jpg?t=st=1661543210~exp=1661543810~hmac=d5f359077c564c1dcb773c676b5150985a137ce33db4b157caa5f2ce3dc4be2c"
-								alt="blog" />
+								src="assets/images/horizontal-shot-satisfied-motivated-sportswoman-has-regular-training-raises-arms-with-dumbbells-does-exercises-muscles-dressed-sportswear-smiles-toothily-isolated-pink-wall-sport-concept.jpg"
+								alt="mulher segurando halteres" />
 
 							<h1 class="mx-auto mb-2 text-2xl font-semibold leading-none tracking-tighter text-gray-900 dark:text-dark-50">
 								VALORES
@@ -150,44 +150,6 @@
 				</div>
 			</section>
 
-			<section class="my-10 grid hidden grid-cols-1 gap-5 sm:grid-cols-3">
-				<!-- Mission -->
-				<div class="text-center sm:text-left">
-					<div class="text-2xl font-bold text-gray-900 dark:text-dark-50">
-						<h1>MISSÃO</h1>
-					</div>
-					<p class="mt-0 mb-4 text-sm text-gray-600 dark:text-dark-500">
-						Proporcionar uma experiência única, oferecendo um serviço de excelência em prol à qualidade de vida, saúde e
-						bem-estar de seus frequentadores em um ambiente agradável oportunizando vínculos significativos que impulsionem as
-						pessoas à seus objetivos.
-					</p>
-				</div>
-				<!-- Vision -->
-				<div class="text-center sm:text-left">
-					<div class="text-2xl font-bold text-gray-900 dark:text-dark-50">
-						<h1>VISÃO</h1>
-					</div>
-					<p class="mt-0 mb-4 text-sm text-gray-600 dark:text-dark-500">
-						Respeitando a individualidade de cada aluno, objetivando ser referência no mercado, proporcionando, principalmente,
-						qualidade de vida aos alunos, motivando-os rumo à concretização de seus objetivos com seriedade, profissionalismo e
-						dedicação.
-					</p>
-				</div>
-				<!-- Values -->
-				<div class="text-center sm:text-left">
-					<div class="text-2xl font-bold text-gray-900 dark:text-dark-50">
-						<h1>VALORES</h1>
-					</div>
-					<p class="mt-0 mb-4 text-sm text-gray-600 dark:text-dark-500">
-						Excelência no atendimento por meio do respeito e da transparência.<br />
-						Dedicação e Atenção; Valorização do Ser humano.<br />
-						Ética e Honestidade<br />
-						Sentimento do Cliente<br />
-						Senso de Urgência Espírito de Equipe<br />
-						Atitude de Dono Determinação
-					</p>
-				</div>
-			</section>
 			<!-- Company units -->
 			<section>
 				<!-- Title -->
@@ -199,7 +161,7 @@
 				</div>
 				<!-- Location -->
 				<div class="grid grid-cols-1 place-items-center gap-4 sm:grid-cols-2">
-					<div class="w-full max-w-sm rounded-lg bg-white dark:bg-dark-800 lg:flex lg:h-72 lg:max-w-full">
+					<div class="w-full rounded-lg bg-white dark:bg-dark-800 lg:flex lg:h-72 lg:max-w-full">
 						<div
 							class="h-48 flex-none overflow-hidden rounded-t bg-cover text-center lg:h-auto lg:w-48 lg:rounded-t-none lg:rounded-l"
 							style="background-image: url('assets/images/unidade1.jpg')"
@@ -231,7 +193,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="w-full max-w-sm rounded-lg bg-white dark:bg-dark-800 lg:flex lg:h-72 lg:max-w-full">
+					<div class="w-full rounded-lg bg-white dark:bg-dark-800 lg:flex lg:h-72 lg:max-w-full">
 						<div
 							class="h-48 flex-none overflow-hidden rounded-t bg-cover text-center lg:h-auto lg:w-48 lg:rounded-t-none lg:rounded-l"
 							style="background-image: url('assets/images/unidade2.jpg')"
